Remove x-overflow: hidden to fix shadow issues

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -22,8 +22,6 @@
   &::after
     box-sizing: border-box
 
-  overflow-x: hidden
-
 
 body
   margin: 0
